# lovely

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  version.h.in
.github/workflows/: branch.yml  develop.yml  merge-request.yml  release.yml
builder/: Dockerfile
lovely/api/: CMakeLists.txt  api.cpp  api.h  api.tests.cpp
lovely/app/: CMakeLists.txt  main.cpp  version.h  version.h.in
lovely/app/include/lovely/: version.h
lovely/app/src/: main.cpp
lovely/controller/: CMakeLists.txt  controller.cpp  controller.h  controller.tests.cpp
lovely/controller/include/lovely/controller/: controller.h  exceptions.h  updater.h
lovely/controller/include/lovely/controller/executor/: executor.h
lovely/controller/include/lovely/controller/executors/: simple.h
lovely/controller/include/lovely/controller/tests/: custom_controller.h
lovely/controller/include/lovely/controller/tests/executor/: simple.h
lovely/controller/include/lovely/controller/tests/updater/: custom_updater.h
lovely/controller/include/lovely/controller/updater/: updater.h
lovely/controller/src/: controller.cpp  controller.tests.cpp  updater.tests.cpp
lovely/controller/src/controller/: controller.tests.cpp
lovely/controller/src/controller/executor/: executor.tests.cpp
lovely/controller/src/controller/tests/: custom_controller.tests.cpp
lovely/controller/src/controller/tests/executor/: simple.tests.cpp
lovely/controller/src/controller/tests/updater/: custom_updater.tests.cpp
lovely/controller/src/controller/updater/: updater.tests.cpp
lovely/controller/src/executor/: simple.tests.cpp
lovely/controller/src/tests/executor/: simple.tests.cpp
lovely/controller/src/tests/updater/: custom_updater.tests.cpp
lovely/fetch/: CMakeLists.txt  fetch.cpp  fetch.h  fetch.tests.cpp
lovely/model/: CMakeLists.txt  model.cpp  model.tests.cpp
lovely/model/include/lovely/model/: exceptions.h  model.h  registry.h
lovely/model/include/lovely/model/registry/: listing.h  registry.h
lovely/model/include/lovely/model/symbol/: etf.h  stock.h  symbol.h
lovely/model/include/lovely/model/tests/model/: custom_model.h
lovely/model/include/lovely/model/tests/symbol/: etf.h  stock.h  symbol.h
lovely/model/src/: model.cpp  model.tests.cpp  registry.tests.cpp
lovely/model/src/model/: model.tests.cpp
lovely/model/src/model/registry/: listing.tests.cpp  registry.tests.cpp
lovely/model/src/model/tests/model/: custom_model.tests.cpp
lovely/model/src/model/tests/symbol/: etf.tests.cpp  stock.tests.cpp  symbol.tests.cpp
lovely/view/: CMakeLists.txt
lovely/view/include/lovely/view/: exceptions.h  view.h
lovely/view/include/lovely/view/tests/view/: custom_view.h
lovely/view/src/: tests_view.cpp  view.cpp  view.tests.cpp
lovely/view/src/view/: view.tests.cpp
lovely/view/src/view/tests/view/: custom_view.tests.cpp
lovely/window/: CMakeLists.txt  window.cpp  window.h  window.tests.cpp
